--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "http://github.com/Pomax/mox-server.git"
   },
   "dependencies": {
-    "express": "3.4.0"
+    "express": "3.4.0",
+    "request": "~2.27.0"
   }
 }
